--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ https://templatemo.com/tm-558-klassy-cafe
                     <div class="left-content">
                         <div class="inner-content">
                             <h4>Hijas de la Patria</h4>
-                            <h6>Por un Futuro en Argentina</h6>
+                            <h6>La voz del pueblo, el corazón de la Patria</h6>
                             <div class="main-white-button scroll-to-section">
                                 <a href="#reservation">Fiscalizár</a>
                             </div>
@@ -158,7 +158,7 @@ https://templatemo.com/tm-558-klassy-cafe
                             <h6>Sobre Nosotros</h6>
                             <h2>Somos un partido joven que pretende cambiar la historia Argentina</h2>
                         </div>
-                        <p>Sin pasado, sin prontuarios y con mucho orgullo Argentino para levantarnos de una vez y para siempre <a href="https://templatemo.com/tag/restaurant" target="_blank" rel="sponsored">Hijas de la Patriá</a> Acompañanos a cambiar el futuro mejorando el presente y borrando el pasado.</p>
+                        <p>Hijas de la Patria es un movimiento político que nace del compromiso con la justicia social, la igualdad y la participación democrática. Apostamos a una patria inclusiva, con educación, salud y trabajo digno como pilares. Nuestro nombre refleja una herencia de lucha y la convicción de construir un futuro más justo y solidario. </p>
                        <!-- <div class="row">
                             <div class="col-4">
                                 <img src="assets/images/about-thumb-01.jpg" alt="">
