--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@ https://templatemo.com/tm-558-klassy-cafe
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="https://www.instagram.com/hijasdelapatria.oficial?igsh=MTh2bXVhNWp3d2pkcA=="><i class="fa fa-instagram"></i></a></li>
+                                <li><a href="https://www.instagram.com/hijasdelapatria.oficial?igsh=MTh2bXVhNWp3d2pkcA==" target="_blank"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                     </div>
                 </div>
